# hatch-python-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml
{{cookiecutter.project_slug}}/tests/: test_example.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: add.py
